--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         background: #f7f7f7;
     }
 
-    /* الشريط العلوي */
     .topbar {
         background: #ffffff;
         padding: 18px 25px;
@@ -24,9 +23,6 @@
         justify-content: space-between;
         align-items: center;
         box-shadow: 0 2px 8px rgba(0,0,0,0.08);
-        position: sticky;
-        top: 0;
-        z-index: 10;
     }
 
     #adminBtn, #logoutBtn {
@@ -37,9 +33,13 @@
         cursor: pointer;
         border: none;
         font-size: 15px;
+        margin-left: 8px;
     }
 
-    /* الحاوية */
+    #logoutBtn.hidden {
+        display: none;
+    }
+
     .container {
         padding: 25px;
         display: grid;
@@ -47,7 +47,6 @@
         gap: 20px;
     }
 
-    /* صندوق */
     .box {
         background: white;
         border-radius: 14px;
@@ -55,24 +54,17 @@
         box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     }
 
-    /* عرض الطلبات كعمود واحد */
     .orders-grid {
         display: flex;
         flex-direction: column;
         gap: 25px;
     }
 
-    /* كارت الطلب */
     .order-card {
         background: #fff;
         border-radius: 14px;
         box-shadow: 0 3px 12px rgba(0,0,0,0.08);
         overflow: hidden;
-        transition: 0.2s;
-    }
-
-    .order-card:hover {
-        transform: translateY(-3px);
     }
 
     .order-img {
@@ -97,7 +89,6 @@
 
     .hidden { display: none; }
 
-    /* نافذة الإضافة */
     .modal {
         position: fixed;
         inset: 0;
@@ -117,7 +108,6 @@
         max-width: 430px;
     }
 
-    /* موبايل */
     @media (max-width: 850px) {
         .container {
             grid-template-columns: 1fr;
@@ -130,8 +120,10 @@
 
 <div class="topbar">
     Uber Albalad
-    <button id="adminBtn">المشرفين</button>
-    <button id="logoutBtn" class="hidden">تسجيل خروج</button>
+    <div>
+        <button id="adminBtn">المشرفين</button>
+        <button id="logoutBtn" class="hidden">تسجيل خروج</button>
+    </div>
 </div>
 
 <div class="container">
@@ -147,7 +139,6 @@
     </div>
 </div>
 
-<!-- نافذة الإضافة -->
 <div class="modal" id="addModal">
     <div class="modal-box">
         <h3>إضافة طلب جديد</h3>
@@ -184,33 +175,38 @@
 
     let isAdmin = false;
 
-    /* تسجيل الدخول */
+    /* تسجيل دخول المشرف */
     adminBtn.onclick = () => {
         const code = prompt("ادخل كود المشرف:");
         if (code === "010100") {
             isAdmin = true;
             adminPanel.classList.remove("hidden");
             logoutBtn.classList.remove("hidden");
+
+            /* تحديث عرض الطلبات بعد تسجيل الدخول */
+            loadOrders();
+
             alert("تم تسجيل دخول المشرف");
         } else {
             alert("الكود غير صحيح");
         }
     };
 
-    /* تسجيل الخروج */
+    /* تسجيل خروج */
     logoutBtn.onclick = () => {
         isAdmin = false;
         adminPanel.classList.add("hidden");
         logoutBtn.classList.add("hidden");
+
+        /* تحديث الطلبات بعد تسجيل الخروج */
+        loadOrders();
+
         alert("تم تسجيل الخروج");
     };
 
     function openAddModal() { addModal.classList.add("show"); }
     function closeAddModal() { addModal.classList.remove("show"); }
-    window.openAddModal = openAddModal;
-    window.closeAddModal = closeAddModal;
 
-    /* رفع الصورة إلى ImgBB */
     async function uploadImage(file) {
         const form = new FormData();
         form.append("image", file);
@@ -222,7 +218,6 @@
         return data.data.url;
     }
 
-    /* حفظ الطلب */
     async function saveOrder() {
         const name = itemName.value;
         const delivery = itemDelivery.value;
@@ -241,38 +236,40 @@
 
         closeAddModal();
     }
-    window.saveOrder = saveOrder;
 
     /* تحميل الطلبات */
-    onValue(ref(db, "orders"), snapshot => {
-        const data = snapshot.val();
-        const list = document.getElementById("ordersList");
+    function loadOrders() {
+        onValue(ref(db, "orders"), snapshot => {
+            const data = snapshot.val();
+            const list = document.getElementById("ordersList");
 
-        if (!data) {
-            list.innerHTML = "<p>لا توجد طلبات حاليا</p>";
-            return;
-        }
+            if (!data) {
+                list.innerHTML = "<p>لا توجد طلبات حاليا</p>";
+                return;
+            }
 
-        list.innerHTML = "";
+            list.innerHTML = "";
 
-        Object.entries(data).forEach(([id, item]) => {
-            const div = document.createElement("div");
-            div.className = "order-card";
+            Object.entries(data).forEach(([id, item]) => {
+                const div = document.createElement("div");
+                div.className = "order-card";
 
-            div.innerHTML = `
-                <img class="order-img" src="${item.image}">
-                <div class="order-info">
-                    <h3>${item.name}</h3>
-                    <p>الديلفري: ${item.delivery}</p>
-                    ${isAdmin ? `<button class="btn btn-red" onclick="deleteOrder('${id}')">حذف</button>` : ""}
-                </div>
-            `;
+                div.innerHTML = `
+                    <img class="order-img" src="${item.image}">
+                    <div class="order-info">
+                        <h3>${item.name}</h3>
+                        <p>الديلفري: ${item.delivery}</p>
+                        ${isAdmin ? `<button class="btn btn-red" onclick="deleteOrder('${id}')">حذف</button>` : ""}
+                    </div>
+                `;
 
-            list.appendChild(div);
+                list.appendChild(div);
+            });
         });
-    });
+    }
 
-    /* حذف */
+    loadOrders();
+
     window.deleteOrder = id => remove(ref(db, "orders/" + id));
 
 </script>
